test/sema/typeck/impl/extension-class-type-param-err.out
error: no method with name `bar` in type `Foo[Int32]`.
--> extension-class-type-param-err.dora:3:23
 | class Foo[T](T)
 | impl Foo[Float32] { fn bar() {} }
 | fn f(x: Foo[Int32]) { x.bar() }
                         ~~~~~~~
 | 
1 error found.
